Bug 1890198 - Account for transform when applying padding r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D241763